2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'exit()' method from the 'WHCgiPage' class to
	'WHCgiApplication'.
	* Created a 'cgiapp' global variable in 'src/wh/whcgiapplication.cpp'
	and 'src/wh/whcgiapplication.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/webhostd/upgrade.cpp' to kill the service
	command process after applying the upgrade.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiApplication::redirect()' method in
	'src/wh/whcgiapplication.cpp' and ''src/wh/whcgiapplication.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiObject' class in 'wh/whcgiobject.cpp' and
	'wh/whcgiobject.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'getValue()' methods in 'WHCgiPost' to return default
	values when the requested CGI variable was not found.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Removed extraneous dependency for 'sy.pro' from 'src/wh/Makefile.am'.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2015-12-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'webhost.service.in'.
2016-01-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whcgipost.cpp' that thew an error when
	processing a CGI object with no POST fields.
2016-01-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.2.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'sync()' call after modifying system files in
	'src/webhostd/upgrade.cpp', 'src/webhostd/ip.cpp' and
	'src/webhostd/ntp.cpp'.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added additional parameters to the NTP configuration in
	'src/webhostd/ntp.cpp'.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.