@@ -54,6 +54,8 @@ class MainObject : public QObject
   void Ntp(const QStringList &cmds);
   void Reboot(const QStringList &cmds);
   void Restart(const QStringList &cmds);
+  void AddUser(const QStringList &cmds);
+  void DeleteUser(const QStringList &cmds);
   void Upgrade(const QStringList &cmds);
   void ProcessCommand(const QString &cmd);
   QUdpSocket *main_command_socket;
