@@ -112,3 +112,9 @@
 	'src/webhostd/ntp.cpp'.
 2016-01-06 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.7.0.
+2016-01-10 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'WHCgiPost::sendAddUserCommand()' and
+	'WHCgiPost::sendDeleteUserCommand()' methods in 'sy/sycgipost.cpp'
+	and 'sy/sycgipost.h'.
+	* Implemented 'ADDUSER' and 'DELETEUSER' commands in
+	'src/webhostd/users.cpp' and 'src/webhostd/webhostd.h'.
